[package]
name = "rmk-protocol"
version = "0.1.0"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Protocol definitions for RMK postcard-rpc communication"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"

[dependencies]
postcard-rpc = { version = "0.11", default-features = false }
postcard-schema = { version = "0.2", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["experimental-derive"] }
heapless = { version = "0.8", default-features = false, features = ["serde"] }
defmt = { version = "1.0", optional = true }

[features]
default = []
# Enable defmt support
defmt = ["dep:defmt", "postcard/use-defmt"]
# Enable matrix tester endpoints
matrix_tester = []